manifest/objects/Apttus__IDEMapFieldProvision__c.object
<CustomObject>
    <description>Holds the mapping between IDE provision record type and agreement fields</description>
    <fields>
        <fullName>Apttus__BaseObject__c</fullName>
        <description>Base object for which field is getting mapped</description>
        <externalId>true</externalId>
        <inlineHelpText>Please provide base object for which field is getting mapped</inlineHelpText>
        <label>Base Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Additional information for reference</description>
        <inlineHelpText>Please add additional information for reference</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEMapProvisionRecordTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDE Provision Record Type</description>
        <inlineHelpText>Please provide IDE Provision Record Type</inlineHelpText>
        <label>IDE Provision Record Type</label>
        <referenceTo>Apttus__IDEMapProvisionRecordType__c</referenceTo>
        <relationshipLabel>IDEMapFieldProvisions</relationshipLabel>
        <relationshipName>IDEMapFieldProvisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__MetaDataFieldId__c</fullName>
        <description>Meta Data Field</description>
        <inlineHelpText>Please provide Meta Data Field</inlineHelpText>
        <label>Meta Data Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDE Map Field Provision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Map Field Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>